Internacionalizacion de mensajes, generacionde pk unico de cliente