@@ -1,28 +1,42 @@
 package com.banco.gestionclientes.infrastructure.config;
 
+import java.util.Locale;
+
 import org.springframework.context.MessageSource;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.support.ResourceBundleMessageSource;
+import org.springframework.context.support.ReloadableResourceBundleMessageSource;
+import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
 import org.springframework.web.servlet.LocaleResolver;
 import org.springframework.web.servlet.i18n.AcceptHeaderLocaleResolver;
 
-import java.util.Locale;
-
 @Configuration
-public class MessageConfig {
+public class MessageConfig extends AcceptHeaderLocaleResolver {
+
 	@Bean
 	public MessageSource messageSource() {
-		ResourceBundleMessageSource messageSource = new ResourceBundleMessageSource();
-		messageSource.setBasename("ValidationMessages");
+		ReloadableResourceBundleMessageSource messageSource = new ReloadableResourceBundleMessageSource();
+		messageSource.setBasename("classpath:ValidationMessages");
 		messageSource.setDefaultEncoding("UTF-8");
+		messageSource.setUseCodeAsDefaultMessage(false);
 		return messageSource;
 	}
 
 	@Bean
 	public LocaleResolver localeResolver() {
-		AcceptHeaderLocaleResolver resolver = new AcceptHeaderLocaleResolver();
-		resolver.setDefaultLocale(Locale.of("es"));
-		return resolver;
+		return this; // Usa el Accept-Language del request
+	}
+
+	@Override
+	public Locale resolveLocale(jakarta.servlet.http.HttpServletRequest request) {
+		String headerLang = request.getHeader("Accept-Language");
+		return (headerLang == null || headerLang.isEmpty()) ? new Locale("es") : Locale.forLanguageTag(headerLang);
+	}
+
+	@Bean
+	public LocalValidatorFactoryBean defaultValidator(MessageSource messageSource) {
+		LocalValidatorFactoryBean bean = new LocalValidatorFactoryBean();
+		bean.setValidationMessageSource(messageSource);
+		return bean;
 	}
 }
